force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnKpmAnticipatedEnergyIntensity__c.field-meta.xml
<CustomField>
    <fullName>ProjturnKpmAnticipatedEnergyIntensity__c</fullName>
    <description>KPM Anticipated Energy Intensity</description>
    <inlineHelpText>This field should show your calculated EUI based on your reported anticipated performance from the KPM tab.</inlineHelpText>
    <label>Anticipated Energy Intensity (Btu/Sq Ft)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>