force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnOtherReceivedMaterials__c.field-meta.xml
<CustomField>
    <fullName>ProjturnOtherReceivedMaterials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Other Compliance Received Materials</description>
    <inlineHelpText>Select checkbox if materials were received.</inlineHelpText>
    <label>Received Materials</label>
    <type>Checkbox</type>
</CustomField>