force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnOtherReceivedMaterialsLoc__c.field-meta.xml
<CustomField>
    <fullName>ProjturnOtherReceivedMaterialsLoc__c</fullName>
    <description>Indicates if Other Compliance Received Materials Yes Text</description>
    <inlineHelpText>Please enter location.</inlineHelpText>
    <label>Received Materials Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>