force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnOtherTrainingVideotaped__c.field-meta.xml
<CustomField>
    <fullName>ProjturnOtherTrainingVideotaped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Other Compliance Training Videotaped</description>
    <inlineHelpText>Select checkbox if training was videotaped.</inlineHelpText>
    <label>Training Videotaped</label>
    <type>Checkbox</type>
</CustomField>