force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnOtherTrainingVideotapedLoc__c.field-meta.xml
<CustomField>
    <fullName>ProjturnOtherTrainingVideotapedLoc__c</fullName>
    <description>Indicates if Other Compliance Training Videotaped Yes Text</description>
    <inlineHelpText>Please enter location .</inlineHelpText>
    <label>Training Videotaped Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>