force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnP100AeFinalRecordDrawingsLoc__c.field-meta.xml
<CustomField>
    <fullName>ProjturnP100AeFinalRecordDrawingsLoc__c</fullName>
    <description>Indicates if P100 AE Final Record Drawings Yes Text</description>
    <inlineHelpText>Please enter location.</inlineHelpText>
    <label>AE Final Record Drawings Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>