force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnP100DocsRedlineUpdated__c.field-meta.xml
<CustomField>
    <fullName>ProjturnP100DocsRedlineUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select checkbox if redline documents were updated at project completion.</description>
    <inlineHelpText>Select checkbox if redline documents were updated at project completion.</inlineHelpText>
    <label>Documents Redline Updated</label>
    <type>Checkbox</type>
</CustomField>