force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnP100DocsRedlineUpdatedLoc__c.field-meta.xml
<CustomField>
    <fullName>ProjturnP100DocsRedlineUpdatedLoc__c</fullName>
    <description>Indicates if P100 Documents Redline Updated Yes Text</description>
    <inlineHelpText>Please enter location.</inlineHelpText>
    <label>Documents Redline Updated Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>