force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnP100EqpMaintVideosHard__c.field-meta.xml
<CustomField>
    <fullName>ProjturnP100EqpMaintVideosHard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select checkbox if maintenance videos were received.</description>
    <inlineHelpText>Select checkbox if maintenance videos were received.</inlineHelpText>
    <label>Equip. Maintenance Videos Hard</label>
    <type>Checkbox</type>
</CustomField>