force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnP100EqpMaintVideosSoftLoc__c.field-meta.xml
<CustomField>
    <fullName>ProjturnP100EqpMaintVideosSoftLoc__c</fullName>
    <description>Indicates if P100 Equipment Maintenance Videos Soft Yes Text</description>
    <inlineHelpText>Please enter location.</inlineHelpText>
    <label>Equip. Maintenance Videos Soft Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>