force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnP100OperationsManual__c.field-meta.xml
<CustomField>
    <fullName>ProjturnP100OperationsManual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if P100 Operations Manual</description>
    <inlineHelpText>Select checkbox if operations manual received.</inlineHelpText>
    <label>Operations Manual</label>
    <type>Checkbox</type>
</CustomField>