force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnP100OperationsManualLoc__c.field-meta.xml
<CustomField>
    <fullName>ProjturnP100OperationsManualLoc__c</fullName>
    <description>Indicates if P100 Operations Manual Yes Text</description>
    <inlineHelpText>Please enter location.</inlineHelpText>
    <label>Operations Manual Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>