force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnP100ReceivedRedline__c.field-meta.xml
<CustomField>
    <fullName>ProjturnP100ReceivedRedline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select checkbox if Redline document has been turned over.</description>
    <inlineHelpText>Select checkbox if Redline document has been turned over.</inlineHelpText>
    <label>Received Redline</label>
    <type>Checkbox</type>
</CustomField>