force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnP100ReceivedRedlineLoc__c.field-meta.xml
<CustomField>
    <fullName>ProjturnP100ReceivedRedlineLoc__c</fullName>
    <description>Indicates if P100 Received Redline Yes Text</description>
    <inlineHelpText>Please enter location.</inlineHelpText>
    <label>Received Redline Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>