force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnP100TrainingMaterials__c.field-meta.xml
<CustomField>
    <fullName>ProjturnP100TrainingMaterials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select checkbox if training materials have been turned over.</description>
    <inlineHelpText>Select checkbox if training materials have been turned over.</inlineHelpText>
    <label>Training Materials</label>
    <type>Checkbox</type>
</CustomField>