force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ProjturnP100TrainingMaterialsLoc__c.field-meta.xml
<CustomField>
    <fullName>ProjturnP100TrainingMaterialsLoc__c</fullName>
    <description>Indicates if P100 Training Materials Yes Text</description>
    <inlineHelpText>Please enter location.</inlineHelpText>
    <label>Training Materials Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>