force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/RegionCode__c.field-meta.xml
<CustomField>
    <fullName>RegionCode__c</fullName>
    <formula>VALUE( BldgId__r.Region_Code__c)</formula>
    <label>Region Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>