force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/ScopeItemCount__c.field-meta.xml
<CustomField>
    <fullName>ScopeItemCount__c</fullName>
    <inlineHelpText>Count of scope items.</inlineHelpText>
    <label>ScopeItemCount</label>
    <summaryForeignKey>PBS_gBUILD_PBuildingScopeSystem__c.Rahd_ProjectBldgParentId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>