force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/SITESBeingPursued__c.field-meta.xml
<CustomField>
    <fullName>SITESBeingPursued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SITES Certification System</description>
    <inlineHelpText>Select the checkbox if the project is pursuing SITES sustainable landscape certification.</inlineHelpText>
    <label>Pursuing SITES Certification?</label>
    <type>Checkbox</type>
</CustomField>