force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/SITESCertificationLvl__c.field-meta.xml
<CustomField>
    <fullName>SITESCertificationLvl__c</fullName>
    <description>SITES Certification Level</description>
    <inlineHelpText>Select the SITES Certification level actually obtained.</inlineHelpText>
    <label>Actual Certification Level Obtained</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>