force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/SITESComments__c.field-meta.xml
<CustomField>
    <fullName>SITESComments__c</fullName>
    <description>Comments applicable to SITES</description>
    <inlineHelpText>Please specify where SITES-related submittals and scorecards can be accessed, and any other SITES-related comments.</inlineHelpText>
    <label>SITES Comments</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>