force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/SITESGoal__c.field-meta.xml
<CustomField>
    <fullName>SITESGoal__c</fullName>
    <description>SITES Goal</description>
    <inlineHelpText>Select the SITES Certification level anticipated to be achieved upon project completion.</inlineHelpText>
    <label>Anticipated Certification Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>