force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/SITESRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>SITESRegistrationNumber__c</fullName>
    <description>SITES Registration Number</description>
    <inlineHelpText>Please enter SITES Registration Number</inlineHelpText>
    <label>SITES Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>