force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/SITESVersion__c.field-meta.xml
<CustomField>
    <fullName>SITESVersion__c</fullName>
    <description>Version # for the SITES rating system</description>
    <inlineHelpText>Please select the SITES version number for this building.</inlineHelpText>
    <label>SITES Version Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>V1</fullName>
            </value>
            <value>
                <fullName>V2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>