force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/SqFtOfApplication__c.field-meta.xml
<CustomField>
    <fullName>SqFtOfApplication__c</fullName>
    <description>Square Footage affected by application of this scope</description>
    <inlineHelpText>Please provide square footage associated with the application of this scope or feature</inlineHelpText>
    <label>Square Footage of Application</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>