force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/TranspSubmReqBikeFacilitiesIndoor__c.field-meta.xml
<CustomField>
    <fullName>TranspSubmReqBikeFacilitiesIndoor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Indoor</description>
    <inlineHelpText>Select if bicycle parking facilities are located indoors.</inlineHelpText>
    <label>Bike Facilities Indoor</label>
    <type>Checkbox</type>
</CustomField>