force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/TranspSubmReqBikeFacilitiesOutdoor__c.field-meta.xml
<CustomField>
    <fullName>TranspSubmReqBikeFacilitiesOutdoor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Outdoor</description>
    <inlineHelpText>Select checkbox if bicycle parking facilities are located outdoors.</inlineHelpText>
    <label>Bike Facilities Outdoor</label>
    <type>Checkbox</type>
</CustomField>