force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/TranspSubmReqBikeFacilitiesProvided__c.field-meta.xml
<CustomField>
    <fullName>TranspSubmReqBikeFacilitiesProvided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Provided</description>
    <inlineHelpText>Select checkbox if building includes onsite bicycle parking facilities for at least 5 percent of building users.</inlineHelpText>
    <label>Bike Facilities Provided</label>
    <type>Checkbox</type>
</CustomField>