force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/TranspSubmReqExistingTransportNtwk__c.field-meta.xml
<CustomField>
    <fullName>TranspSubmReqExistingTransportNtwk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Existing Transport Networks</description>
    <inlineHelpText>Select checkbox if project team has developed a plan to connect the location with existing transit network, coordinating with the local transit agency as necessary.</inlineHelpText>
    <label>Existing Transport Networks</label>
    <type>Checkbox</type>
</CustomField>