force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/TranspSubmReqGsaParkingPolicy__c.field-meta.xml
<CustomField>
    <fullName>TranspSubmReqGsaParkingPolicy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if GSA Parking Policy</description>
    <inlineHelpText>Select checkbox if building has minimized automobile parking onsite in accordance with new GSA parking policy.</inlineHelpText>
    <label>GSA Parking Policy</label>
    <type>Checkbox</type>
</CustomField>