force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/TranspSubmReqMsrsAltFuelParkSpots__c.field-meta.xml
<CustomField>
    <fullName>TranspSubmReqMsrsAltFuelParkSpots__c</fullName>
    <description>If Alt Fuel Parking Spots Created Yes, then #</description>
    <inlineHelpText>If hybrid/ electric/ alternative fuel parking spots were created, please estimate number of spots</inlineHelpText>
    <label>Number of Hybrid/ Electric Parking Spots</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>