force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/TranspSubmReqMsrsAltFuelParkSpotsCrtd__c.field-meta.xml
<CustomField>
    <fullName>TranspSubmReqMsrsAltFuelParkSpotsCrtd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Created</description>
    <inlineHelpText>Select checkbox if hybrid/ electric/ alternative fuel vehicle parking spots were created</inlineHelpText>
    <label>Hybrid/ Electric Vehicle Parking Spots?</label>
    <type>Checkbox</type>
</CustomField>