force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/TranspSubmReqMsrsBicycleParking__c.field-meta.xml
<CustomField>
    <fullName>TranspSubmReqMsrsBicycleParking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Bicycle parking</description>
    <inlineHelpText>Select checkbox if bicycle parking facilities are located onsite.</inlineHelpText>
    <label>Bicycle parking</label>
    <type>Checkbox</type>
</CustomField>