force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/TranspSubmReqMsrsHybridRefuelStations__c.field-meta.xml
<CustomField>
    <fullName>TranspSubmReqMsrsHybridRefuelStations__c</fullName>
    <description>If Hybrid Refueling Stations Created Yes, then #</description>
    <inlineHelpText>If facility contains electric vehicle charging stations, please indicate how many.</inlineHelpText>
    <label>Num of Elec. Vehicle Charging Stations</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>