force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/TranspSubmReqMsrsHybridRefuelStnsCrtd__c.field-meta.xml
<CustomField>
    <fullName>TranspSubmReqMsrsHybridRefuelStnsCrtd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Created</description>
    <inlineHelpText>Select checkbox if facility contains electric vehicle charging stations.</inlineHelpText>
    <label>Electric Vehicle Charging Stations</label>
    <type>Checkbox</type>
</CustomField>