force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/TranspSubmReqMsrsPublicTransp__c.field-meta.xml
<CustomField>
    <fullName>TranspSubmReqMsrsPublicTransp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Bike Path</description>
    <inlineHelpText>Select checkbox if facility provides pedestrian-friendly access to public transport.</inlineHelpText>
    <label>Public Transportation</label>
    <type>Checkbox</type>
</CustomField>