force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteHaulerContact__c.field-meta.xml
<CustomField>
    <fullName>WasteHaulerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Provide name of C&amp;D hauler or contractor.</inlineHelpText>
    <label>Hauler</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>gBUILD Project Buildings (Hauler)</relationshipLabel>
    <relationshipName>gBUILD_Project_Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>