force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteMaterialsBldgReuseAchievedDate__c.field-meta.xml
<CustomField>
    <fullName>WasteMaterialsBldgReuseAchievedDate__c</fullName>
    <description>The percentage of building resue achieved to date</description>
    <inlineHelpText>If applicable, please enter the percent of building reuse achieved.</inlineHelpText>
    <label>% of Building Reuse To Date</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>