force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteMaterialsCDWasteWeight__c.field-meta.xml
<CustomField>
    <fullName>WasteMaterialsCDWasteWeight__c</fullName>
    <inlineHelpText>Please provide the total weight of Construction and Demolition Waste by weight in tons at Project Completion.</inlineHelpText>
    <label>Total C&amp;D Waste (weight in tons)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>