force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteMaterialsComment__c.field-meta.xml
<CustomField>
    <fullName>WasteMaterialsComment__c</fullName>
    <description>Comment on materials management</description>
    <inlineHelpText>Please provide additional comments pertaining to your innovative materials management practice.</inlineHelpText>
    <label>Explain Materials Management Practice</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>