force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteMaterialsProjectValueRecycledPct__c.field-meta.xml
<CustomField>
    <fullName>WasteMaterialsProjectValueRecycledPct__c</fullName>
    <description>The amount of recycled materials as a percetage of the project value</description>
    <inlineHelpText>Enter the percent of total project value that comes from recycled content.</inlineHelpText>
    <label>% of Project Value From Recycled Content</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>