force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteMaterialsRecycledInstldDatePct__c.field-meta.xml
<CustomField>
    <fullName>WasteMaterialsRecycledInstldDatePct__c</fullName>
    <description>The percent of recycled content installed to date</description>
    <inlineHelpText>Enter the percent of recycled content installed to date.</inlineHelpText>
    <label>% of Recycled Content Installed To Date</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>