force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteWasteLeedComments__c.field-meta.xml
<CustomField>
    <fullName>WasteWasteLeedComments__c</fullName>
    <description>If not, then comment on why</description>
    <inlineHelpText>If not on track to meet LEED requirements pertaining to waste and materials management, please explain why.</inlineHelpText>
    <label>If Project is Not on Track, Explain Why</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>