force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteWasteLeedOnTrackMeetRequirements__c.field-meta.xml
<CustomField>
    <fullName>WasteWasteLeedOnTrackMeetRequirements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the project on track to meet LEED requirements</description>
    <inlineHelpText>Select checkbox if project is pursuing LEED and is still on track to meet the LEED requirements pertaining to waste and materials management.</inlineHelpText>
    <label>Project on Track to Meet LEED Waste Reqs</label>
    <type>Checkbox</type>
</CustomField>