force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteWasteMaterialsMgmt__c.field-meta.xml
<CustomField>
    <fullName>WasteWasteMaterialsMgmt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Waste and Materials Management is being done</description>
    <inlineHelpText>Select the checkbox if waste and materials management is being done for this project.</inlineHelpText>
    <label>Waste And Materials Management</label>
    <type>Checkbox</type>
</CustomField>