force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteWstdivAtCloseout__c.field-meta.xml
<CustomField>
    <fullName>WasteWstdivAtCloseout__c</fullName>
    <description>Please enter Construction &amp; Demolition waste diversion percentage at project&apos;s 50% construction milestone.</description>
    <inlineHelpText>Please enter Construction &amp; Demolition waste diversion percentage at project&apos;s 50% construction milestone.</inlineHelpText>
    <label>Waste Diverted at Closeout (%)</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>