force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteWstdivAverageMonthly__c.field-meta.xml
<CustomField>
    <fullName>WasteWstdivAverageMonthly__c</fullName>
    <description>Project&apos;s Waste Diversion Average Monthly in Tons</description>
    <inlineHelpText>Please enter project&apos;s average monthly waste diversion (tons).</inlineHelpText>
    <label>Average Monthly Waste Diverted (Tons)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>