force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteWstdivDate__c.field-meta.xml
<CustomField>
    <fullName>WasteWstdivDate__c</fullName>
    <description>Project&apos;s Waste Diversion to Date as a percentage</description>
    <inlineHelpText>Please update with current waste diversion to date.</inlineHelpText>
    <label>% of Waste Diverted To Date</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>