force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteWstdivMethodDonation__c.field-meta.xml
<CustomField>
    <fullName>WasteWstdivMethodDonation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Waste Diversion Method Donation is a feature of the project</description>
    <inlineHelpText>Select checkbox if donation is a waste diversion method of this project.</inlineHelpText>
    <label>Donation as Waste Diversion Method</label>
    <type>Checkbox</type>
</CustomField>