force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteWstdivMethodOtherText__c.field-meta.xml
<CustomField>
    <fullName>WasteWstdivMethodOtherText__c</fullName>
    <description>Indicates if Waste Diversion Method Other Text is a feature of the project</description>
    <inlineHelpText>If other waste diversion method is used, please indicate here.</inlineHelpText>
    <label>Other Waste Diversion Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>