force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteWstdivMethodReuseForProjectUse__c.field-meta.xml
<CustomField>
    <fullName>WasteWstdivMethodReuseForProjectUse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Waste Diversion Method Reuse for Project Use is a feature of the project</description>
    <inlineHelpText>Select checkbox if reuse is a waste diversion method of the project.</inlineHelpText>
    <label>Reuse as Waste Diversion Method</label>
    <type>Checkbox</type>
</CustomField>