force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WasteWstdivTarget__c.field-meta.xml
<CustomField>
    <fullName>WasteWstdivTarget__c</fullName>
    <description>Enter Waste Diversion Target (%) for project&apos;s Construction and Demolition waste.</description>
    <inlineHelpText>Enter Waste Diversion Target (%) for project&apos;s Construction and Demolition waste.</inlineHelpText>
    <label>Waste Diversion Target (%)</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>