force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WaterCaprainNarr__c.field-meta.xml
<CustomField>
    <fullName>WaterCaprainNarr__c</fullName>
    <description>Include any storage and treatment strategies and describe how in compliance with local regulations</description>
    <inlineHelpText>Please explain stategies for rainwater storage and treatment. Please include information on the system, implementation plan, and actual production goal as well as how the building will be in compliance with local regulations.</inlineHelpText>
    <label>Rainwater Capture Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>