force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WaterCoolingTowerPoth20Narr__c.field-meta.xml
<CustomField>
    <fullName>WaterCoolingTowerPoth20Narr__c</fullName>
    <description>Describe compliance with local regulations for storage and treatment. Also please describe strategies, implementation plan and any other information to demonstrate compliance.</description>
    <inlineHelpText>Please describle strategies for reducing cooling tower used of potable water; describe compliance with local regulations and treatment; please describe strategies, implementation plan and any other information to demonstrate compliance.</inlineHelpText>
    <label>Cooling Tower Water Use Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>