force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WaterIndoorPoth2oLccfigsPbckpd__c.field-meta.xml
<CustomField>
    <fullName>WaterIndoorPoth2oLccfigsPbckpd__c</fullName>
    <description>Payback Period (in years):</description>
    <inlineHelpText>Please provide the indoor potable water payback period (in years) = total investment cost/yearly cash inflow.</inlineHelpText>
    <label>Payback Period (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>