force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WaterIndoorPoth2oLccfigsSir__c.field-meta.xml
<CustomField>
    <fullName>WaterIndoorPoth2oLccfigsSir__c</fullName>
    <description>Savings-to-Investment Ratio (SIR):</description>
    <inlineHelpText>Please provide the indoor potable water savings-to-investment ratio (SIR) = Lifetime Savings/Investment.</inlineHelpText>
    <label>Savings-to-Investment Ratio (SIR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>