force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WaterIndoorPoth2oNarr__c.field-meta.xml
<CustomField>
    <fullName>WaterIndoorPoth2oNarr__c</fullName>
    <description>Describe systems / fixtures changed and indicate use of gray water in narrative. Also, please explain how the indoor water targets will be met and what approach was used for calculating reductions.</description>
    <inlineHelpText>Describe systems / fixtures changed and indicate use of gray water in narrative. Also, please explain how the indoor water targets will be met and what approach was used for calculating reductions.</inlineHelpText>
    <label>Indoor Potable Water Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>