force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WaterMeterCoolingTowerScopeBleed__c.field-meta.xml
<CustomField>
    <fullName>WaterMeterCoolingTowerScopeBleed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Bleed Downbleed</description>
    <inlineHelpText>Please select the checkbox if the metering of the cooling tower bleed off/blowdown is included in the project building scope.</inlineHelpText>
    <label>Cooling Tower Bleed Off/Blowdown Metered</label>
    <type>Checkbox</type>
</CustomField>