force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/fields/WaterOutdoorPoth2oNarr__c.field-meta.xml
<CustomField>
    <fullName>WaterOutdoorPoth2oNarr__c</fullName>
    <description>Please describe methods and strategies implemented to reduce potable water use for irrigation. Also, please explain how the outdoor water targets will be met and what approach was used for calculating reductions.</description>
    <inlineHelpText>Please describe methods and strategies implemented to reduce potable water used for irrigation. Also, please explain how the outdoor water targets will be met and what approach was used for calculating reductions.</inlineHelpText>
    <label>Outdoor Potable Water Narrative</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>