force-app/main/default/objects/PBS_gBUILD_ProjectBuilding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>BldgId__c</columns>
    <columns>LEEDCertificationLvl__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>